--- a/index.html
+++ b/index.html
@@ -2,12 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Winter Solstice Celebrations Around the World</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
 </head>
 <body>
-
     <header id="main-header">
-        <h1>Celebrating the Winter Solstice</h1>
+        <h1 id="main-heading">Celebrating the Winter Solstice</h1>
         <nav id="main-nav">
             <ul>
                 <li><a href="#introduction">Introduction</a></li>
@@ -17,16 +20,21 @@
                 <li><a href="#traditions">Solstice Traditions</a></li>
                 <li><a href="#conclusion">Conclusion</a></li>
             </ul>
+            
         </nav>
     </header>
 
-    <section id="introduction">
+    <section id="introduction" class="section">
         <h2>Introduction to the Winter Solstice</h2>
-        <p>The winter solstice is a significant astronomical event that marks the shortest day and the longest night of the year. It occurs annually in December in the Northern Hemisphere and in June in the Southern Hemisphere. This event has been observed and celebrated by cultures around the world for thousands of years, often symbolizing rebirth, reflection, and the triumph of light over darkness.</p>
+        <p>The winter solstice is a significant astronomical event that marks the
+             shortest day and the longest night of the year. 
+             It occurs annually in December in the Northern Hemisphere and in June in the Southern Hemisphere.
+              This event has been observed and celebrated by cultures around the world for thousands of years, 
+            often symbolizing rebirth, reflection, and the triumph of light over darkness.</p>
     </section>
 
-    <section id="science">
-        <h2>The Science Behind the Solstice</h2>
+    <section id="science" class="section">
+        <h2>The Science Behind the Winter Solstice</h2>
         <p>The solstices occur due to the Earth's axial tilt of approximately 23.5 degrees relative to its orbital plane around the Sun. This tilt causes different parts of the Earth to receive varying amounts of sunlight throughout the year, leading to the changing seasons. During the winter solstice, one hemisphere is tilted the farthest away from the Sun, resulting in the shortest period of daylight.</p>
         <p>At the exact moment of the solstice, the Sun reaches its lowest maximum elevation in the sky. In the Northern Hemisphere, this happens around December 21st or 22nd, when the Sun is directly over the Tropic of Capricorn at 23.5 degrees south latitude. In the Southern Hemisphere, the winter solstice occurs around June 20th or 21st, when the Sun is over the Tropic of Cancer at 23.5 degrees north latitude.</p>
         <p>The solstice is a precise moment in time, but its effects are felt throughout the day. The term "solstice" comes from the Latin words "sol" (sun) and "sistere" (to stand still), because the Sun's apparent movement north or south comes to a stop before reversing direction.</p>
@@ -34,7 +42,7 @@
 
     <section id="hemispheres">
         <h2>Solstice Across Hemispheres</h2>
-        <p>The experience of the solstice differs greatly between the Northern and Southern Hemispheres due to their opposite seasons.</p>
+        <p class="unique">The experience of the solstice differs greatly between the Northern and Southern Hemispheres due to their opposite seasons.</p>
         <article class="hemisphere" id="northern-hemisphere">
             <h3>Northern Hemisphere</h3>
             <p>In the Northern Hemisphere, the December solstice marks the beginning of winter. Countries like the United States, Canada, Russia, and much of Europe experience their shortest day and longest night. The weather typically becomes colder, and many cultures have developed traditions to bring light and warmth into this dark time of year.</p>
@@ -43,7 +51,7 @@
             <h3>Southern Hemisphere</h3>
             <p>Conversely, in the Southern Hemisphere, the December solstice signals the start of summer. Nations such as Australia, South Africa, and Argentina enjoy their longest day and shortest night. This time is associated with warmth, outdoor activities, and often, summer vacations.</p>
         </article>
-        <p>This opposite experience of the solstice underscores the diversity of cultural responses to the same astronomical event, influenced by local climate and historical traditions.</p>
+        <p class="unique">This opposite experience of the solstice underscores the diversity of cultural responses to the same astronomical event, influenced by local climate and historical traditions.</p>
     </section>
 
     <section id="celebrations">
@@ -86,15 +94,18 @@
         <p>The winter solstice is a profound event that connects humanity across time and space. Despite differences in culture and climate, people around the world share common themes in their celebrations—hope, renewal, and the enduring human spirit. Understanding the science behind the solstice enhances our appreciation of these traditions and highlights our connection to the cosmos.</p>
     </section>
 
+    <!-- Additional sections go here -->
+
     <footer id="main-footer">
         <p>&copy; 2024 Winter Solstice Celebrations</p>
         <nav id="footer-nav">
             <ul>
-                <li><a href="#main-header">Back to Top</a></li>
-                <li><a href="#contact">Contact Us</a></li>
+                <li><a href="#introduction">Back to Top</a></li>
+                <li><a href="https://dev.to" target="_blank">Contact Us</a></li>
             </ul>
         </nav>
     </footer>
 
+    <script src="script.js"></script>
 </body>
 </html>
