--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
             </ul>
             
         </nav>
+        <div id="menu-container"></div>
+
     </header>
 
     <section id="introduction" class="section">
